--- a/styles/details.css
+++ b/styles/details.css
@@ -39,14 +39,14 @@
 .resource-total {
     border: 1px dotted blue;
     display: flex;
-    flex-direction: row;
+    flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     
     width: 50%;
 }
 .resource-current {
-    border: 1px dotted blue;
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -60,7 +60,7 @@
     width: 100%;
 } */
 .skill-icon {
-    border: 1px dotted blue;
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -120,7 +120,7 @@
 .upgrade-skill {
     border: 1px solid black;
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     height: 60px;
